add device ping support
